--- a/ShopApp/ShopApp/Views/Shared/_ShopLayoutPage.cshtml
+++ b/ShopApp/ShopApp/Views/Shared/_ShopLayoutPage.cshtml
@@ -182,7 +182,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="~/Shop/Product" class="@(ViewBag.Title == "Product" ? "mm-active" : "")">
+                                <a href="~/Shop/Product" class="@(ViewBag.Title == "Product" || ViewBag.Title == "CreateProduct" ? "mm-active" : "")">
                                     Product
                                 </a>
                             </li>
