--- a/ShopApp/ShopApp/Views/Shop/Category.cshtml
+++ b/ShopApp/ShopApp/Views/Shop/Category.cshtml
@@ -1,8 +1,8 @@
-﻿@model IEnumerable<ShopApp.Brand>
+﻿@model IEnumerable<ShopApp.Category>
 
 @{
-    ViewBag.Title = "Brand";
-    ViewBag.HeaderTitle = "List of Brand";
+    ViewBag.Title = "Category";
+    ViewBag.HeaderTitle = "List Category";
     Layout = "~/Views/Shared/_ShopLayoutPage.cshtml";
 }
 
@@ -12,48 +12,35 @@
     <thead>
         <tr>
             <th>
-                Seq #
+                Name
             </th>
             <th>
-                 Brand Name
+                Date Create / Modified
             </th>
-            <th>
-                Date Created / Modified
-            </th>
-            <th>Status</th>
             <th>Action</th>
         </tr>
     </thead>
-    @{ int i = 1;}
     <tbody>
         @foreach (var item in Model)
         {
-
             <tr>
-                <td>@i</td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.brandName)
+                    @Html.DisplayFor(modelItem => item.categoryName)
                 </td>
                 <td>
                     @item.dateCreated.Value.ToLongDateString()
                 </td>
                 <td>
-                    @(item.status == 1 ? "Active": "Inactive")
-                </td>
-                <td>
-                    <button class="btn btn-primary" onclick="onEdit(@item.brandId)" style="cursor: pointer;"><i class="fa fa-edit"></i> Edit</button> |
-                    <button class="btn btn-danger" onclick="onDelete(@item.brandId)" style="cursor: pointer;"><i class="fa fa-trash"></i> Delete</button> 
+                    <button class="btn btn-primary" onclick="onEdit(@item.categoryId)" style="cursor: pointer;"><i class="fa fa-edit"></i> Edit</button> |
+                    <button class="btn btn-danger" onclick="onDelete(@item.categoryId)" style="cursor: pointer;"><i class="fa fa-trash"></i> Delete</button>
 
                 </td>
             </tr>
-
-            i++;
         }
     </tbody>
 </table>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!--Dialog-->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="~/Content/Shop/brand/brand.js"></script>
+<script src="~/Content/Shop/category/category.js"></script>
