--- a/ShopApp/ShopApp/Views/Home/Shop.cshtml
+++ b/ShopApp/ShopApp/Views/Home/Shop.cshtml
@@ -11,7 +11,7 @@
             @foreach (var item in Model)
             {
                 <div class="col-12 col-md-4 col-lg-3 mb-5">
-                    <a class="product-item" href="#">
+                    <a class="product-item" href="~/Home/Detail/@item.productId">
                         <img src="~/UploadedFiles/@item.Image.FirstOrDefault().imageFile" class="img-fluid product-thumbnail">
                         <h3 class="product-title">@item.productName</h3>
                         <strong class="product-price">Php @item.listPrice.ToString("N2")</strong>
